Implement SafeGradle security checks and features
- Add OsvAdvisoryClient for querying vulnerabilities from OSV API.
- Introduce PinDynamicVersionIntention to replace dynamic versions with placeholders.
- Create SafeGradleBaseline for managing security violation baselines.
- Implement SafeGradleFileWatcher to monitor changes in relevant Gradle files.
- Add SafeGradleInspection for real-time security checks in Gradle files.
- Create SafeGradleScanHistory to track scan results over time.
- Develop SafeGradleStatusBarWidget for displaying security status in the IDE.
- Implement SafeGradleYamlSchemaProvider for .safegradle.yml schema support.
- Add WeakCryptoCheck to detect weak cryptographic algorithms in build scripts.
- Create JSON schema for .safegradle.yml configuration.
- Implement comprehensive unit tests for various security checks.